# ulg

./: .gitignore  LICENSE  docker-compose.yml
be/: Dockerfile  pyproject.toml
be/src/be/: bnc_coca.csv  corpus.py  deck.py  main.py
be/stubs/: coolname.pyi
be/tests/: test_corpus.py  test_deck.py  test_main.py
fe/: App.scss  App.tsx  Card.tsx  ClueCandidateEditor.tsx  ClueContext.tsx  ClueEditor.tsx  ClueElement.tsx  Dockerfile  Form.tsx  Game.tsx  GameListPage.tsx  GamePage.tsx  Letter.tsx  LoggedOutPage.tsx  Nav.tsx  NewGamePage.tsx  NumberToken.tsx  PhaseSection.tsx  PlayerElement.tsx  Stands.tsx  Symbol.tsx  Tag.tsx  WordSearch.tsx  WordsPage.tsx  eslint.config.mjs  index.html  index.tsx  package-lock.json  package.json  tsconfig.json  webpack.config.js
nginx/: nginx.conf
ssl/: README.md
