[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "be"
version="0.0.0"
description = ''
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]==0.115.5",
  "fastapi-camelcase==2.0.0",
  "coolname==2.2.0",
  "websockets==14.1",
  ]


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/be tests}"