[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "be"
version="0.0.0"
description = ''
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]==0.115.5",
  "fastapi-camelcase==2.0.0",
  "coolname==2.2.0",
  "websockets==14.1",
  "rich==13.9.4",
  ]


[tool.mypy]
mypy_path = "stubs"

[tool.hatch.envs.style]
dependencies = ["setuptools", "isort", "black", "pylama", "mypy", "pytest", "httpx"]

[tool.hatch.envs.style.scripts]
format = [
       "isort --color src tests",
       "black src tests",
]
check = [
      "pylama --ignore E203 src tests", # E203 is not pep8-compliant, and black breaks it
      "mypy --strict --pretty src tests",
] 
all = [
    "hatch run style:format",
    "hatch run style:check",
]

[tool.hatch.envs.test]
dependencies = ["pytest"]

[tool.hatch.envs.test.scripts]
all = ["pytest"]

[tool.pytest.ini_options]
addopts = "--no-header -W error --showlocals -vv"
log_level = "INFO"
